Universal configuration reader

--- a/GiacomTest/appsettings.json
+++ b/GiacomTest/appsettings.json
@@ -9,6 +9,6 @@
   "appSettings": {
   },
   "connectionStrings": {
-    "mainConn": "ata source=bernard2;initial catalog=OnioSklad;  persist security info=True;user id=usr_logistika;password=usr_logistika;MultipleActiveResultSets=True;App=EntityFramework"
+    "mainConn": "data source=bernard2;initial catalog=OnioSklad;  persist security info=True;user id=usr_logistika;password=usr_logistika;MultipleActiveResultSets=True;App=EntityFramework"
   }
 }
