--- a/GiacomImportData/appsettings.json
+++ b/GiacomImportData/appsettings.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "appSettings": {
+    "filePath": "c:\\Users\\vrabe\\source\\repos\\GiacomTest\\GiacomImportData\\techtest_cdr.csv"
+  },
+  "connectionStrings": {
+    "mainConn": "data source=bernard2;initial catalog=OnioSklad;  persist security info=True;user id=usr_logistika;password=usr_logistika;MultipleActiveResultSets=True;App=EntityFramework"
   }
+
 }
