--- a/Infrastrucure.Test/Infrastrucure.Test.csproj
+++ b/Infrastrucure.Test/Infrastrucure.Test.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Infrastrucure\Infrastrucure.csproj" />
+    <ProjectReference Include="..\Infrastrucure\Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
