Remove appconfiguration dependency, use .NET dependency

--- a/GiacomImportData/appsettings.json
+++ b/GiacomImportData/appsettings.json
@@ -10,6 +10,9 @@
   },
   "connectionStrings": {
     "mainConn": "data source=bernard2;initial catalog=OnioSklad;  persist security info=True;user id=usr_logistika;password=usr_logistika;MultipleActiveResultSets=True;App=EntityFramework"
+  },
+  "mongoConnection": {
+    "ConnectionString": "mongodb+srv://test_user1:test_user1@cluster0.dio4fse.mongodb.net/?authSource=admin&w=majority&appName=Cluster0",
+    "DatabaseName": "CrdData"
   }
-
 }
