--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -8,9 +8,13 @@
 
   <ItemGroup>
     <Folder Include="Entities\" />
+    <Folder Include="Constants\" />
+    <Folder Include="Enums\" />
+    <Folder Include="ValueObjects\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.16" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
